# dl-experiments

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  pyproject.toml
configs/: config.yaml
configs/data/: README.md  fashion_mnist.yaml
configs/experiment/: fashion_mnist_vit.yaml
configs/loss/: README.md
configs/metrics/: classification.yaml
configs/model/: README.md  vit.yaml
configs/optimizer/: adamw.yaml  sgd.yaml
configs/scheduler/: cosine.yaml  none.yaml
configs/trainer/: default.yaml
docs/: extending.md  reproducibility.md  student_guide.md
hooks/: pre-push
scripts/: capture_env.sh  demo_determinism.py  find_batch_size.py  profile_model.py  run_seeds.py  visualize_memory.py
src/: __init__.py  checkpointing.py  distributed.py  engine.py  logging_utils.py  memory_viz.py  metrics.py  reproducibility.py  tracking.py  train.py
src/data/: fashion_mnist.py
src/models/: vit.py
tests/: conftest.py  helpers.py  test_checkpointing.py  test_distributed.py  test_engine.py  test_memory_viz.py  test_reproducibility.py  test_tracking.py
