[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reproducible-dl"
version = "0.1.0"
description = "A task-independent template for reproducible deep-learning experiments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.8.0",
    "numpy>=2.2.6",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "wandb>=0.22.2",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
# Plotting for scripts/profile_model.py + visualize_memory.py. Optional so the core
# install stays lean: `uv sync --extra viz`.
viz = ["matplotlib>=3.8"]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.9",
    "ty>=0.0.1",
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
# E/F = pycodestyle + pyflakes (style + real bugs), B = bugbear (likely bugs),
# UP = pyupgrade (modern syntax), I = import sorting (replaces isort).
select = ["E", "F", "B", "UP", "I"]
# ruff-format owns line length; it won't rewrap comments/docstrings/URLs, so E501
# would only nag about those. Let the formatter be the single source of truth.
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# ty (Astral's type checker) is in beta — its config schema and diagnostics may change
# between 0.0.x releases. It resolves third-party types from the project's .venv, so
# run `uv sync` before committing.
[tool.ty.src]
include = ["src"]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "slow: end-to-end tests that run several training epochs (deselect with '-m \"not slow\"')",
]
